[workspace]
members = ["fuzz"]

[package]
name = "ijson"
version = "0.1.3"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RedisJSON/ijson"
description = "A more memory efficient replacement for serde_json::Value"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
tracing = ["mockalloc/tracing"]
thread_safe = []

[workspace.dependencies]
serde = "1.0.117"
serde_json = "1.0.59"


[dependencies]
hashbrown = "0.13.2"
dashmap = { version = "5.4", features = ["raw-api"] }
lazy_static = "1.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
ctor = { version = "0.1.16", optional = true }
paste = "1.0.15"
half = "2.0.0"

[dev-dependencies]
mockalloc = "0.1.2"
ctor = "0.1.16"
rand = "0.8.4"

