[package]
name = "ijson-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[lib]
name = "ijson_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dependencies.ijson]
path = ".."

[[bin]]
name = "fuzz_json_de"
path = "fuzz_targets/fuzz_json_de.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_binary_decode"
path = "fuzz_targets/fuzz_binary_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_binary_roundtrip"
path = "fuzz_targets/fuzz_binary_roundtrip.rs"
test = false
doc = false
bench = false
