[package]
name = "ijson-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[lib]
name = "ijson_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dependencies.ijson]
path = ".."

[[bin]]
name = "fuzz_json_de"
path = "fuzz_targets/fuzz_json_de.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cbor_decode"
path = "fuzz_targets/fuzz_cbor_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cbor_roundtrip"
path = "fuzz_targets/fuzz_cbor_roundtrip.rs"
test = false
doc = false
bench = false
